* Unit Test erstellt, ohne Spring Boot Gedöns, dafür mit viel Mockito (KNUS freuts)

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>vavr</artifactId>
             <version>0.10.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
         <!-- Testing dependencies-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
