* ArtikelService in das application package verschoben * maven profile IntegrationTests über alle Tests gelegt *

--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,9 @@
                     <configuration>
                         <printSummary>true</printSummary>
                         <trimStackTrace>false</trimStackTrace>
+                        <includes>
+                            <include>**/*Test.java</include>
+                        </includes>
                     </configuration>
                 </plugin>
             </plugins>
